# rust-continous-profiling-poc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.daemon  Dockerfile.server  README.md  build.rs  docker-compose.yml  profile_53fb761e-44b0-45c9-b874-6e7a1280500d.json  profile_53fb761e-44b0-45c9-b874-6e7a1280500d.pb  profile_57e6993f-f78b-4e15-89ab-0b5889b4213e.json  profile_57e6993f-f78b-4e15-89ab-0b5889b4213e.pb  profile_70ce7b34-9f3d-4d94-856a-e06bbd37b466.json  profile_70ce7b34-9f3d-4d94-856a-e06bbd37b466.pb  profile_d9cf2f4d-d575-4a88-b996-c394252a58e1.json  profile_d9cf2f4d-d575-4a88-b996-c394252a58e1.pb  profile_e4901171-5acd-4359-a6bd-f38e3e4bd1d9.json  profile_e4901171-5acd-4359-a6bd-f38e3e4bd1d9.pb
k8s/: deployment.yaml  service.yaml
proto/: pprof.proto  service.proto
src/: lib.rs  main.rs  proto.rs
web/: Dockerfile  components.d.ts  index.html  nginx.conf  package.json  vite.config.js  vite.config.ts
web/src/: App.vue  router.ts
web/src/components/: AboutPage.vue  AppHeader.vue  Dashboard.vue  FlameGraph.vue  Layout.vue
web/src/pages/: About.vue
