[package]
name = "profiling"
version = "0.1.0"
edition = "2021"

[dependencies]
pprof = { version = "0.14", features = [
    "flamegraph",
    "prost-codec",
] }
tonic = { version = "0.12", features = ["prost"] }
prost = "0.13.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12"
